<resources>
<string name="app_name">TestFor_NewClient</string>

<string name="hello_world">Hello world!</string>
<string name="action_settings">Settings</string>

    <string name="cardview_center">cardView 的中部</string>

    <string name="home_new">新闻</string>
    <string name="home_video">视频</string>
    <string name="home_me">我的</string>
    <string name="drawer_btn_rss">频道管理</string>
    <string name="subscribe_my_category">我的频道</string>
    <string name="subscribe_more_category">更多频道</string>
    <string name="subscribe_manager_category_info">单击增删频道</string>
    <string name="subscribe_manager_category_info_2">单击增删频道，长按拖拽排序</string>
    <string name="search_hint">搜索感兴趣的内容</string>

    <string name="second_back_press_exit">再按一次退出花生壳</string>

    <string name="pushmsg_center_no_more_msg">已经到底啦</string>
    <string name="pushmsg_center_pull_up_text">松开加载更多</string>
    <string name="pushmsg_center_pull_down_text">下拉可以刷新</string>
    <string name="pushmsg_center_pull_release_text">松开获取更多</string>
    <string name="pushmsg_center_pull_down_update_time">最后更新时间 : </string>
    <string name="pushmsg_center_load_more_ongoing_text">正在加载中</string>
    <string name="xsearch_loading">正在加载中…</string>

    <!-- 加载图片失败时的提示文本 -->
    <string name="picture_load_image_failed">点击屏幕，重新加载</string>
    <!-- 加载中提示 -->
    <string name="picture_image_loading">正在加载…</string>

    <!-- 下拉刷新和上拉加载更多的文本 -->
    <string name="pull_to_refresh_header_hint_normal">@string/pushmsg_center_pull_down_text</string>
    <string name="pull_to_refresh_header_hint_normal2">上拉可以刷新</string>
    <string name="pull_to_refresh_header_hint_ready">松开后刷新</string>
    <string name="pull_to_refresh_header_hint_loading">@string/pushmsg_center_load_more_ongoing_text</string>
    <string name="pull_to_refresh_header_last_time">@string/pushmsg_center_pull_down_update_time</string>
    <string name="pull_to_refresh_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_refreshing_label">@string/pull_to_refresh_header_hint_loading</string>
    <string name="pull_to_refresh_no_more_data">@string/pushmsg_center_no_more_msg</string>
    <string name="pull_to_refresh_network_error">网络不给力，请检查网络</string>

    <!--极光推送的文本-->
    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
</resources>
