<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/sina_view_indicator"
        >
        <LinearLayout
            android:id="@+id/subscribe_main_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/subscribe_bg"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dimen_14dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_14dp"
                android:gravity="bottom"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/my_category_text"
                    style="@style/subscribe_my_tip_text"
                    android:text="@string/subscribe_my_category" />

                <TextView
                    android:id="@+id/my_category_tip_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_12dp"
                    android:text="@string/subscribe_manager_category_info_2"
                    android:textColor="@color/subscribe_tip_text"
                    android:textSize="@dimen/dimen_11sp" />
            </LinearLayout>

            <View
                android:id="@+id/seperate_line"
                style="@style/subscribe_seperate_line" />

            <com.sina.home.testfor_newclient.widget.DragGrid.DragGrid
                android:id="@+id/userGridView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_14dp"
                android:layout_marginRight="@dimen/dimen_14dp"
                android:gravity="center"
                android:horizontalSpacing="@dimen/dimen_14dp"
                android:listSelector="@android:color/transparent"
                android:numColumns="4"
                android:scrollbars="vertical"
                android:stretchMode="columnWidth"
                android:verticalSpacing="14.0px"
                app:numColumn="4"
                app:alphaScale="0.8"
                app:dragScale="1.2"
                />

            <View
                android:id="@+id/seperate_line2"
                style="@style/subscribe_seperate_line" />

            <TextView
                android:id="@+id/more_category_text"
                style="@style/subscribe_more_tip_text"
                android:layout_marginBottom="14.0dip"
                android:layout_marginLeft="10.0dip"
                android:text="@string/subscribe_more_category" />

            <com.sina.home.testfor_newclient.widget.DragGrid.OtherGridView
                android:id="@+id/otherGridView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dip"
                android:layout_marginRight="14dip"
                android:gravity="center"
                android:horizontalSpacing="14dip"
                android:listSelector="@android:color/transparent"
                android:numColumns="4"
                android:scrollbars="vertical"
                android:stretchMode="columnWidth"
                android:verticalSpacing="14.0px" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
