<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- 整体的结构参考搜狐的新闻客户端来实现整体的布局-->
    <!--首页的 a 部分-->
    <FrameLayout
        android:id="@+id/layout_titles"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:layout_marginBottom="@dimen/dimen_80dp"
        >
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             >
             <!--标题-->
             <RelativeLayout
                 android:id="@+id/layout_title"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_80dp">
                 <!-- 标题左边部分 显示 log  内容 及渐变的处理-->
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_toLeftOf="@+id/layout_menu"
                     android:background="#fff">
                     <ImageView
                         android:id="@+id/img_logo"
                         android:layout_width="@dimen/dimen_40dp"
                         android:layout_height="@dimen/dimen_40dp"
                         android:src="@drawable/ic_launcher"
                         android:scaleType="centerCrop"
                         android:layout_marginLeft="@dimen/dimen_12dp"
                         android:layout_centerVertical="true"
                         />
                     <com.sina.home.testfor_newclient.widget.TitleHorizontalScrollView.TitleHoriontalScrollView
                         android:id="@+id/hscroller_title"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_toRightOf="@id/img_logo"
                         android:scrollbars="none"
                         app:clickedType="Side"
                         />
                     <!--渐变边效果 左-->
                     <View
                         android:id="@+id/title_shade_left"
                         android:layout_width="@dimen/dimen_60dp"
                         android:layout_height="wrap_content"
                         android:layout_alignLeft="@id/hscroller_title"
                         android:background="@drawable/title_shade_left"
                         />
                     <!--做渐变效果 右-->
                     <View
                         android:id="@+id/title_shade_right"
                         android:layout_width="@dimen/dimen_60dp"
                         android:layout_height="wrap_content"
                         android:layout_alignRight="@id/hscroller_title"
                         android:background="@drawable/title_shade_right"
                         />
                 </RelativeLayout>
                 <!-- 内容菜单键 触发选择关注的键-->
                 <RelativeLayout
                     android:id="@+id/layout_menu"
                     android:layout_width="@dimen/dimen_70dp"
                     android:layout_height="match_parent"
                     android:layout_alignParentRight="true"
                     android:background="#fff"
                     >
                     <ImageView
                         android:id="@+id/img_menu"
                         android:layout_width="@dimen/dimen_36dp"
                         android:layout_height="@dimen/dimen_40dp"
                         android:layout_centerVertical="true"
                         android:layout_alignParentLeft="true"
                         android:layout_marginLeft="@dimen/dimen_10dp"
                         android:src="@drawable/icon_menu_selector"
                         android:scaleType="centerCrop"
                         android:clickable="true"/>
                 </RelativeLayout>
             </RelativeLayout>
             <!--标题的指引-->
             <RelativeLayout
                 android:id="@+id/layout_title_index"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_3dp"
                 android:layout_alignBottom="@id/layout_title"
                 android:layout_alignLeft="@id/layout_title"
                 android:layout_marginLeft="@dimen/dimen_60dp"
                 >
                 <ImageView
                     android:id="@+id/img_title_index"
                     android:layout_width="@dimen/dimen_60dp"
                     android:layout_height="@dimen/dimen_3dp"
                     android:background="#fff"
                     android:visibility="gone"
                     />
             </RelativeLayout>
             <!--内容-->
             <RelativeLayout
                 android:id="@+id/layout_title_content"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_below="@id/layout_title">
                 <android.support.v4.view.ViewPager
                     android:id="@+id/viewpager_content"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"/>
             </RelativeLayout>
             <!--items的指引-->
             <RelativeLayout
                 android:id="@+id/layout_items_index"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_3dp"
                 android:layout_alignBottom="@id/layout_title_content">
             </RelativeLayout>
         </RelativeLayout>
        </FrameLayout>
    <!--首页的 b 部分-->
    <FrameLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_80dp"
        android:layout_gravity="top"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            />
    </FrameLayout>
    <!-- 首页的 d 部分-->
    <LinearLayout
        android:id="@+id/layout_items"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_80dp"
        android:layout_gravity="bottom"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="#eee"
        >
        <RelativeLayout
            android:id="@+id/sina_layout_new"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/sina_img_home_new"
                android:layout_width="@dimen/dimen_30dp"
                android:layout_height="@dimen/dimen_30dp"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:duplicateParentState="true"
                android:src="@drawable/item_home_new_selector"
                />
            <TextView
                android:id="@+id/sina_text_home_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/sina_img_home_new"
                android:duplicateParentState="true"
                android:text="@string/home_new"
                android:textColor="@color/item_home_new_selector"
                />
            <ImageView
                android:layout_width="@dimen/dimen_6dp"
                android:layout_height="@dimen/dimen_6dp"
                android:layout_alignTop="@id/sina_img_home_new"
                android:layout_toRightOf="@id/sina_img_home_new"
                android:scaleType="center"
                />
            </RelativeLayout>
        <RelativeLayout
            android:id="@+id/sina_layout_video"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/sina_img_home_video"
                android:layout_width="@dimen/dimen_30dp"
                android:layout_height="@dimen/dimen_30dp"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:duplicateParentState="true"
                android:src="@drawable/item_home_video_selector"
                />
            <TextView
                android:id="@+id/sina_text_home_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/sina_img_home_video"
                android:duplicateParentState="true"
                android:text="@string/home_video"
                android:textColor="@color/item_home_video_selector"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/sina_layout_me"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/sina_img_home_me"
                android:layout_width="@dimen/dimen_30dp"
                android:layout_height="@dimen/dimen_30dp"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:duplicateParentState="true"
                android:src="@drawable/item_home_me_selector"
                />
            <TextView
                android:id="@+id/sina_text_home_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/sina_img_home_me"
                android:duplicateParentState="true"
                android:text="@string/home_me"
                android:textColor="@color/item_home_me_selector"
                />
        </RelativeLayout>
    </LinearLayout>
    <!--首页的 c 部分-->
    <FrameLayout
        android:id="@+id/layout_section"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/dimen_80dp"
        android:background="#ececec">
    </FrameLayout>
</FrameLayout>
